--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
   <!-- Custom styles for this template -->
   <link href="css/grayscale.min.css" rel="stylesheet">
 
+  <link rel="stylesheet" type="text/css" href="css/slick.css"/>
+
 </head>
 
 <body id="page-top">
@@ -95,6 +97,10 @@
       height: 100%;
    }
 
+   .slider img{
+     max-width:100%
+   }
+
   </style>
 
    <!-- Intro Section -->
@@ -108,6 +114,13 @@
           <div class="intro-video">
            <iframe width="100%" src="https://www.youtube.com/embed/6fpTxpOABMc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
          </div>
+         <div class="slider">
+          <div><img src="img/slider/2019-05-04 04.33.26 1.jpg"></div>
+          <div><img src="img/slider/2019-05-04 05.30.28 1.jpg"></div>
+          <div><img src="img/slider/2019-05-04 05.30.29 1.jpg"></div>
+          <div><img src="img/slider/2019-05-04 06.05.26 1.jpg"></div>
+          <div><img src="img/slider/2019-05-04 06.14.48 1.jpg"></div>
+        </div>
         </div>
       </div>
     </div>
@@ -258,10 +271,105 @@
 
   <!-- Plugin JavaScript -->
   <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+ 
+    <style>
+      .slick-dots{
+      position: absolute;
+      bottom: 20px;
+      left: 0;
+      width: 100%;
+      list-style: none;
+      text-align: center;
+      margin: 0;
+    }
+    .slick-dots li{
+      display: inline-block;
+    }
+    .slick-dots li button{
+      outline: none;
+      display: inline-block;
+      background-color: transparent;
+      border-width: 0;
+    }
+    .slick-dots li button span{
+      display: none;
+    }
+    .slick-dots li button:before{
+      display: inline-block;
+      width: 10px;
+      height: 10px;
+      border-radius: 5px;
+      content: '';
+      background-color: #ffffff;
+    }
+    .slick-dots li.slick-active button:before{
+      background-color: green;
+    }
+    </style>
+
+    <style>
+    .slick-buttons{
+        background-color: transparent;
+        border-width: 0;
+      }
+      .slick-buttons{
+        position: absolute;
+        top: 50%;
+        transform: translate3d(0, -50%, 0);
+        z-index: 2;
+      }
+      .slick-buttons span{
+        display: none;
+      }
+      .slick-buttons.slick-prev:before,
+      .slick-buttons.slick-next:before{
+        display: block;
+        width: 20px;
+        height: 20px;
+        border-color: #ffffff;
+        content: '';
+      }
+      .slick-buttons.slick-prev{
+        left: 20px;
+      }
+      .slick-buttons.slick-prev:before{
+        border-top-width: 8px;
+        border-left-width: 8px;
+        border-top-style: solid;
+        border-left-style: solid;
+        transform: rotate(-45deg);
+      }
+      .slick-buttons.slick-next:before{
+        border-bottom-width: 8px;
+        border-right-width: 8px;
+        border-bottom-style: solid;
+        border-right-style: solid;
+        transform: rotate(-45deg);
+      }
+      .slick-buttons.slick-next{
+        right: 20px;
+      }
+    </style>
 
   <!-- Custom scripts for this template -->
   <script src="js/grayscale.min.js"></script>
-
+  <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script type="text/javascript" src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+  <script type="text/javascript" src="js/slick.min.js"></script>
+  <script type="text/javascript">
+    $(document).ready(function(){
+      $('.slider').slick({
+        autoplay: true,
+        dots: true,
+        prevArrow: '<button type="button" class="slick-buttons slick-prev"><span>Previous</span></button>',
+        nextArrow: '<button type="button" class="slick-buttons slick-next"><span>Next</span></button>',
+        customPaging: function(slick,index) {
+          return '<button><span>' + (index+1) + '</span></button>';
+        }
+      });
+    });
+  </script>
+				
 </body>
 
 </html>
