--- a/index.html
+++ b/index.html
@@ -2,19 +2,20 @@
 <html lang="en">
 
 <head>
+
   <!-- COMMON TAGS -->
 <title>CHARLIE</title>
 <!-- Search Engine -->
 <meta name="description" content="testing description">
-<meta name="image" content="https://charlieccy.github.io/startbootstrap-grayscale/#.jpg">
+<meta name="image" content="https://charlieccy.github.io/startbootstrap-grayscale/#/img/.jpg">
 <!-- Schema.org for Google -->
 <meta itemprop="name" content="testing title">
 <meta itemprop="description" content="testing description">
-<meta itemprop="image" content="https://charlieccy.github.io/startbootstrap-grayscale/#.jpg">
+<meta itemprop="image" content="https://charlieccy.github.io/startbootstrap-grayscale/#/img/.jpg">
 <!-- Open Graph general (Facebook, Pinterest & Google+) -->
 <meta name="og:title" content="testing title">
 <meta name="og:description" content="testing description">
-<meta name="og:image" content="https://charlieccy.github.io/startbootstrap-grayscale/#.jpg">
+<meta name="og:image" content="https://charlieccy.github.io/startbootstrap-grayscale/#/img/.jpg">
 <meta name="og:url" content="https://charlieccy.github.io/startbootstrap-grayscale/#">
 <meta name="og:site_name" content="Charlie's world">
 <meta name="og:type" content="website">
