--- a/index.html
+++ b/index.html
@@ -4,26 +4,29 @@
 <head>
 
   <!-- COMMON TAGS -->
-<title>CHARLIE</title>
+
+<title>testing title</title>
 <!-- Search Engine -->
 <meta name="description" content="testing description">
-<meta name="image" content="https://charlieccy.github.io/startbootstrap-grayscale/#/img/.jpg">
+<meta name="image" content="https://charlieccy.github.io/startbootstrap-grayscale/#/img//Users/charliechan/Desktop/coding/startbootstrap-grayscale/#/slider/2019-05-04 06.14.48 1.jpg">
 <!-- Schema.org for Google -->
 <meta itemprop="name" content="testing title">
 <meta itemprop="description" content="testing description">
-<meta itemprop="image" content="https://charlieccy.github.io/startbootstrap-grayscale/#/img/.jpg">
+<meta itemprop="image" content="https://charlieccy.github.io/startbootstrap-grayscale/#/img//Users/charliechan/Desktop/coding/startbootstrap-grayscale/#/slider/2019-05-04 06.14.48 1.jpg">
 <!-- Open Graph general (Facebook, Pinterest & Google+) -->
 <meta name="og:title" content="testing title">
 <meta name="og:description" content="testing description">
-<meta name="og:image" content="https://charlieccy.github.io/startbootstrap-grayscale/#/img/.jpg">
+<meta name="og:image" content="https://charlieccy.github.io/startbootstrap-grayscale/#/img//Users/charliechan/Desktop/coding/startbootstrap-grayscale/#/slider/2019-05-04 06.14.48 1.jpg">
 <meta name="og:url" content="https://charlieccy.github.io/startbootstrap-grayscale/#">
 <meta name="og:site_name" content="Charlie's world">
 <meta name="og:type" content="website">
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
   <meta name="author" content="">
 
+ 
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
