--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
   <!-- COMMON TAGS -->
 <meta charset="utf-8">
-<title>Charlie's world</title>
+<title>testing title</title>
 <!-- Search Engine -->
 <meta name="description" content="testing description">
 <meta name="image" content="https://charlieccy.github.io/startbootstrap-grayscale/#/img/slider/2019-05-04 06.14.48 1.jpg">
@@ -21,7 +21,7 @@
 <meta name="og:site_name" content="Charlie's world">
 <meta name="og:type" content="website">
 
- 
+
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <meta name="author" content="">
