--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <title>testing title</title>
 <!-- Search Engine -->
 <meta name="description" content="testing description">
-<meta name="image" content="https://charlieccy.github.io/startbootstrap-grayscale/#/img/slider/2019-05-04 06.14.48 1.jpg">
+<meta name="image" content="https://charlieccy.github.io/startbootstrap-grayscale/#/img/bg-signup.jpg">
 <!-- Schema.org for Google -->
 <meta itemprop="name" content="testing title">
 <meta itemprop="description" content="testing description">
-<meta itemprop="image" content="https://charlieccy.github.io/startbootstrap-grayscale/#/img/slider/2019-05-04 06.14.48 1.jpg">
+<meta itemprop="image" content="https://charlieccy.github.io/startbootstrap-grayscale/#/img/bg-signup.jpg">
 <!-- Open Graph general (Facebook, Pinterest & Google+) -->
 <meta name="og:title" content="testing title">
 <meta name="og:description" content="testing description">
-<meta name="og:image" content="https://charlieccy.github.io/startbootstrap-grayscale/#/img/slider/2019-05-04 06.14.48 1.jpg">
+<meta name="og:image" content="https://charlieccy.github.io/startbootstrap-grayscale/#/img/bg-signup.jpg">
 <meta name="og:url" content="https://charlieccy.github.io/startbootstrap-grayscale/#">
 <meta name="og:site_name" content="Charlie's world">
 <meta name="og:type" content="website">
