--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
   <!-- COMMON TAGS -->
 <meta charset="utf-8">
-<title>testing title</title>
+<title>Charlie's world</title>
 <!-- Search Engine -->
 <meta name="description" content="testing description">
 <meta name="image" content="https://charlieccy.github.io/startbootstrap-grayscale/#/img/bg-signup.jpg">
@@ -23,7 +23,6 @@
 
 
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
   <meta name="author" content="">
 
 
