--- a/index.html
+++ b/index.html
@@ -212,6 +212,20 @@
             <input type="email" class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="inputEmail" placeholder="Enter email address...">
             <button type="submit" class="btn btn-primary mx-auto">Subscribe</button>
           </form>
+        
+        <style>
+          #google-form{
+            Width: 100%;
+          }
+        </style>
+
+          <iframe
+          id="google-form"
+          src="https://docs.google.com/forms/d/e/1FAIpQLSc8JoNg6TaZdr8VekPw5bEIeU4CJg1Y8GfnrRlzcs8G3FsWNA/viewform?embedded=true" width="640" 
+          height="531" 
+          frameborder="0" 
+          marginheight="0" 
+          marginwidth="0">載入中…</iframe>
 
         </div>
       </div>
