--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <meta name="description" content="testing description">
 <meta name="image" content="https://charlieccy.github.io/startbootstrap-grayscale/#/img/bg-signup.jpg">
 <!-- Schema.org for Google -->
-<meta itemprop="name" content="testing title">
+<meta itemprop="name" content="Charlie's world">
 <meta itemprop="description" content="testing description">
 <meta itemprop="image" content="https://charlieccy.github.io/startbootstrap-grayscale/#/img/bg-signup.jpg">
 <!-- Open Graph general (Facebook, Pinterest & Google+) -->
-<meta name="og:title" content="testing title">
+<meta name="og:title" content="Charlie's world">
 <meta name="og:description" content="testing description">
 <meta name="og:image" content="https://charlieccy.github.io/startbootstrap-grayscale/#/img/bg-signup.jpg">
 <meta name="og:url" content="https://charlieccy.github.io/startbootstrap-grayscale/#">
