--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
             <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open
             source, and you can use it for any purpose, personal or commercial.</p>
           <div class="intro-video">
-            <iframe width="100%" src="https://youtu.be/cLVKn4dzA6o" frameborder="0"
-              allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/cLVKn4dzA6o" frameborder="0" 
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
           <br/>
           <br/>
