--- a/index.html
+++ b/index.html
@@ -149,16 +149,15 @@
       <div class="row">
         <div class="col-lg-12 mx-auto">
           <h2 class="mb-4">Introduction</h2>
-          <p>Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download
-            the template on
-            <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open
-            source, and you can use it for any purpose, personal or commercial.</p>
+          <p>You can listen to this song while you are browsing my artworks. Enjoy! :)
+            <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>.</p>
           <div class="intro-video">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/cLVKn4dzA6o" frameborder="0" 
             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
           <br/>
           <br/>
+          <p>I am a travelholic. These are some photos I took when I travelled to Taiwan :)</p>
           <div class="slider">
             <div><img src="img/slider/2019-05-04 04.33.26 1.jpg"></div>
             <div><img src="img/slider/2019-05-04 05.30.28 1.jpg"></div>
