--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
     h2{
         font-family: 'Indie Flower', cursive;
     }
+    h4{
+      font-family: 'Indie Flower', cursive;
+    }
     .secondary-font {
         font-family: 'Indie Flower', cursive;
         font-size: 25px;
@@ -226,13 +229,15 @@
           <div class="slider project-slider">
             <div class="image-bg" style="background-image: url(img/slider/sweet.jpg);"></div>
             <div class="image-bg" style="background-image: url(img/slider/chan.jpg);"></div>
+            <div class="image-bg" style="background-image: url(img/slider/logo.jpg);"></div>
+            <div class="image-bg" style="background-image: url(img/slider/logo2.jpg);"></div>
           </div>
         </div>
         <div class="col-lg-6 order-lg-first">
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-right">
-                <h4 class="text-white">Posters</h4>
+                <h4 class="text-white">Posters and Logos</h4>
                 <p class="mb-0 text-white-50">Another example of a project with its respective description. These
                   sections work well responsively as well, try this theme on a small screen!</p>
                 <hr class="d-none d-lg-block mb-0 mr-0">
@@ -511,7 +516,7 @@
       border-left-width: 8px;
       border-top-style: solid;
       border-left-style: solid;
-      transform: rotate(-90deg);
+      transform: rotate(-45deg);
     }
 
     .slick-buttons.slick-next:before {
@@ -519,7 +524,7 @@
       border-right-width: 8px;
       border-bottom-style: solid;
       border-right-style: solid;
-      transform: rotate(-90deg);
+      transform: rotate(-45deg);
     }
 
     .slick-buttons.slick-next {
