--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
   <section class="contact-section bg-black">
     <div class="container">
 
-      <div class="row">
+      <div class="row justify-content-center">
 
         <div class="col-md-4 mb-3 mb-md-0">
           <div class="card py-4 h-100">
@@ -375,7 +375,7 @@
           </div>
         </div>
 
-        <div class="col-md-4 mb-3 mb-md-0">
+        <div class="col-md-4 mb-3 mb-md-0 ">
           <div class="card py-4 h-100">
             <div class="card-body text-center">
               <i class="fas fa-envelope text-primary mb-2"></i>
@@ -388,6 +388,8 @@
           </div>
         </div>
 
+      </div>
+    </div>
      
       <div class="social d-flex justify-content-center">
         </a>
@@ -399,8 +401,6 @@
         </a>
       </div>
 
-
-    </div>
   </section>
 
   <!-- Footer -->
