--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
       <div class="row">
         <div class="col-lg-8 mx-auto">
           <h2 class="text-black-100 mb-4">Who am I?</h2>
-          <p class="text-black-100">I am Charlie from the Polytechnic University. I major in advertising design.
-            <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a></p>
+          <p class="text-black-100">I am Charlie from the Polytechnic University. I am a Year 2 Advertising Design student. I love drawing, dreaming, reading, travelling and listen to music.
+          And here's my photo:)</p>
             <img class="img-fluid" src="img/slider/personal.jpg" alt="">
         </div>
       </div>
@@ -152,7 +152,7 @@
       <div class="row">
         <div class="col-lg-12 mx-auto">
           <h2 class="mb-4">Introduction</h2>
-          <p>You can listen to this song while you are browsing my artworks. Enjoy! :)
+          <p>This is the beginning of my Portfolio. You can listen to this song while you are browsing my artworks. Enjoy! :)
             <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>.</p>
           <div class="intro-video">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/cLVKn4dzA6o" frameborder="0" 
@@ -185,8 +185,7 @@
         <div class="col-xl-4 col-lg-5">
           <div class="featured-text text-center text-lg-left">
             <h4>My Artworks</h4>
-            <p class="text-black-50 mb-0">Grayscale is open source and MIT licensed. This means you can use it for any
-              project - even commercial projects! Download it, customize it, and publish your website!</p>
+            <p class="text-black-50 mb-0">The pictures below are my Daily sketches, Poster and Logos, Photos and Storyboard done in the previous Semester.</p>
           </div>
         </div>
       </div>
@@ -214,8 +213,7 @@
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
                 <h4 class="text-white">Daily Sketches</h4>
-                <p class="mb-0 text-white-50">An example of where you can put an image of a project, or anything else,
-                  along with a description.</p>
+                <p class="mb-0 text-white-50">There are some daily sketches drawn when I was bored.</p>
                 <hr class="d-none d-lg-block mb-0 ml-0">
               </div>
             </div>
@@ -236,10 +234,11 @@
         <div class="col-lg-6 order-lg-first">
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
-              <div class="project-text w-100 my-auto text-center text-lg-right">
+              <div class="project-text w-100 my-auto text-center text-lg-left">
                 <h4 class="text-white">Posters and Logos</h4>
-                <p class="mb-0 text-white-50">Another example of a project with its respective description. These
-                  sections work well responsively as well, try this theme on a small screen!</p>
+                <p class="mb-0 text-white-50">The first poster is about a song called "Sweet but Psycho"</p>
+                <p class="mb-0 text-white-50">The second poster is made based on the feeling of "Hope"</p>
+                <p class="mb-0 text-white-50">The logos are made for a Koi fish expert</p>
                 <hr class="d-none d-lg-block mb-0 mr-0">
               </div>
             </div>
@@ -267,8 +266,7 @@
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
                 <h4 class="text-white">Photos</h4>
-                <p class="mb-0 text-white-50">An example of where you can put an image of a project, or anything else,
-                  along with a description.</p>
+                <p class="mb-0 text-white-50">I am a travelholic. These are some photos I took when I travelled to Taiwan :)</p>
                 <hr class="d-none d-lg-block mb-0 ml-0">
               </div>
             </div>
@@ -320,10 +318,9 @@
         <div class="col-lg-6 order-lg-first">
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
-              <div class="project-text w-100 my-auto text-center text-lg-right">
+              <div class="project-text w-100 my-auto text-center text-lg-left">
                 <h4 class="text-white">Storyboard</h4>
-                <p class="mb-0 text-white-50">Another example of a project with its respective description. These
-                  sections work well responsively as well, try this theme on a small screen!</p>
+                <p class="mb-0 text-white-50">This part is my favourite. I really enjoy making a story and it is a story of a superhero and his evil wife.</p>
                 <hr class="d-none d-lg-block mb-0 mr-0">
               </div>
             </div>
