--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
                 <h4 class="text-white">Storyboard</h4>
-                <p class="mb-0 text-white-50">This part is my favourite. I really enjoy making a story and it is a story of a superhero and his evil wife.</p>
+                <p class="mb-0 text-white-50">This part is my favourite. I really enjoy creating a story and it is a story of a superhero and his evil wife.</p>
                 <hr class="d-none d-lg-block mb-0 mr-0">
               </div>
             </div>
