--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       <div class="row">
         <div class="col-lg-8 mx-auto">
           <h2 class="text-black-100 mb-4">Who am I?</h2>
-          <p class="text-black-100">I am Charlie from the Polytechnic University. I am a Year 2 Advertising Design student. I love drawing, dreaming, reading, travelling and listen to music.
+          <p class="text-black-100">I am Charlie from the Polytechnic University. I am a Year 2 Advertising Design student. I love drawing, dreaming, reading, travelling and listening to music.
           And here's my photo:)</p>
             <img class="img-fluid" src="img/slider/personal.jpg" alt="">
         </div>
