--- a/index.html
+++ b/index.html
@@ -144,6 +144,14 @@
     .slider img {
       max-width: 100%
     }
+   
+    .slider img{
+      width: 100%;
+      background-position: center center;
+      background-size: contain;
+      background-repeat: no-repeat;
+      }
+
   </style>
 
   <!-- Intro Section -->
@@ -160,18 +168,32 @@
           </div>
           <br/>
           <br/>
-          <p>I am a travelholic. These are some photos I took when I travelled to Taiwan :)</p>
+          <p>I studied Fine Arts in my secondary school life. Therefore, it would be a challenge for me to study design in University because fine art and design are totally different. Here are my SBA portfolie, daily sketches in my secondary school life and some designs I have done before.</p>
           <div class="slider">
-            <div><img src="img/slider/2019-05-04 04.33.26 1.jpg"></div>
-            <div><img src="img/slider/2019-05-04 05.30.28 1.jpg"></div>
-            <div><img src="img/slider/2019-05-04 05.30.29 1.jpg"></div>
-            <div><img src="img/slider/2019-05-04 06.05.26 1.jpg"></div>
-            <div><img src="img/slider/2019-05-04 06.14.48 1.jpg"></div>
+            <div><img src="img/slider/SBA.jpg"></div>
+            <div><img src="img/slider/SBA1.jpg"></div>
+            <div><img src="img/slider/SBA2.jpg"></div>
+            <div><img src="img/slider/SBA3.jpg"></div>
+            <div><img src="img/slider/SBA4.jpg"></div>
+            <div><img src="img/slider/SBA5.jpg"></div>
+            <div><img src="img/slider/SBA6.jpg"></div>
+            <div><img src="img/slider/SBA7.jpg"></div>
+            <div><img src="img/slider/SBA8.jpg"></div>
+            <div><img src="img/slider/SBA9.jpg"></div>
+            <div><img src="img/slider/SBA10.jpg"></div>
+            <div><img src="img/slider/SBA11.jpg"></div>
+            <div><img src="img/slider/SBA12.jpg"></div>
+            <div><img src="img/slider/SBA17.jpg"></div>
+            <div><img src="img/slider/SBA13.jpg"></div>
+            <div><img src="img/slider/SBA14.jpg"></div>
+            <div><img src="img/slider/SBA15.jpg"></div>
+            <div><img src="img/slider/SBA16.jpg"></div>
           </div>
         </div>
       </div>
     </div>
   </section>
+
 
   <!-- Projects Section -->
   <section id="projects" class="projects-section bg-light">
@@ -185,7 +207,7 @@
         <div class="col-xl-4 col-lg-5">
           <div class="featured-text text-center text-lg-left">
             <h4>My Artworks</h4>
-            <p class="text-black-50 mb-0">The pictures below are my Daily sketches, Poster and Logos, Photos and Storyboard done in the previous Semester.</p>
+            <p class="text-black-50 mb-0">The pictures below are my Daily sketches, Poster and Logos, Photos and Storyboard done in the previous Semester. They are all different from what I have done in my secondary school life.</p>
           </div>
         </div>
       </div>
@@ -204,7 +226,6 @@
             <div class="image-bg" style="background-image: url(img/slider/d8.jpg);"></div>
             <div class="image-bg" style="background-image: url(img/slider/d9.jpeg);"></div>
             <div class="image-bg" style="background-image: url(img/slider/daily.jpg);"></div>
-            <div class="image-bg" style="background-image: url(img/slider/d10.jpg);"></div>
             <div class="image-bg" style="background-image: url(img/slider/d11.jpg);"></div>
           </div>
         </div>
@@ -259,6 +280,11 @@
             <div class="image-bg" style="background-image: url(img/slider/1.jpg);"></div>
             <div class="image-bg" style="background-image: url(img/slider/2.jpg);"></div>
             <div class="image-bg" style="background-image: url(img/slider/3.jpg);"></div>
+            <div class="image-bg" style="background-image: url(img/slider/11.jpg);"></div>
+            <div class="image-bg" style="background-image: url(img/slider/12.jpg);"></div>
+            <div class="image-bg" style="background-image: url(img/slider/13.jpg);"></div>
+            <div class="image-bg" style="background-image: url(img/slider/16.jpg);"></div>
+            <div class="image-bg" style="background-image: url(img/slider/15.jpg);"></div>
           </div>
         </div>
         <div class="col-lg-6">
