--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
         <div class="col-xl-4 col-lg-5">
           <div class="featured-text text-center text-lg-left">
             <h4>My Artworks</h4>
-            <p class="text-black-50 mb-0">The pictures below are my Daily sketches, Poster and Logos, Photos and Storyboard done in the previous Semester. They are all different from what I have done in my secondary school life.</p>
+            <p class="text-black-50 mb-0">The pictures below are my Daily sketches, Poster and Logos, Photos and Storyboard done in the previous Semester. They are all different from what I have done before.</p>
           </div>
         </div>
       </div>
