--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta itemprop="image" content="https://charlieccy.github.io/startbootstrap-grayscale//img/bg-signup.jpg">
   <!-- Open Graph general (Facebook, Pinterest & Google+) -->
   <meta name="og:title" content="Charlie's world">
-  <meta name="og:description" content="testing description">
+  <meta name="og:description" content="Charlie's portfolio">
   <meta name="og:image" content="https://charlieccy.github.io/startbootstrap-grayscale//img/slider/bbg.jpg">
   <meta name="og:url" content="https://charlieccy.github.io/startbootstrap-grayscale/#">
   <meta name="og:site_name" content="Charlie's world">
