--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
   <!-- Open Graph general (Facebook, Pinterest & Google+) -->
   <meta name="og:title" content="Charlie's world">
   <meta name="og:description" content="Charlie's portfolio">
-  <meta name="og:image" content="https://charlieccy.github.io/startbootstrap-grayscale//img/slider/HAHA.jpg">
-  <meta name="og:url" content="https://charlieccy.github.io/startbootstrap-grayscale/#">
-  <meta name="og:site_name" content="Charlie's world">
+  <meta name="og:image" content="https://charlieccy.github.io/startbootstrap-grayscale//img/slider/hh.jpg">
+  <meta name="og:url" content="https://charlieccy.github.io/startbootst
   <meta name="og:type" content="website">
 
 
