--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   <meta charset="utf-8">
   <title>Charlie's world</title>
   <!-- Search Engine -->
-  <meta name="description" content="testing description">
-  <meta name="image" content="https://charlieccy.github.io/startbootstrap-grayscale//img/bg-signup.jpg">
+  <meta name="description" content="Charlie's portfolio">
+  <meta name="image" content="https://charlieccy.github.io/startbootstrap-grayscale//img/slider/hh.jpg">
   <!-- Schema.org for Google -->
   <meta itemprop="name" content="Charlie's world">
-  <meta itemprop="description" content="testing description">
-  <meta itemprop="image" content="https://charlieccy.github.io/startbootstrap-grayscale//img/bg-signup.jpg">
+  <meta itemprop="description" content="Charlie's portfolio">
+  <meta itemprop="image" content="https://charlieccy.github.io/startbootstrap-grayscale//img/slider/hh.jpg">
   <!-- Open Graph general (Facebook, Pinterest & Google+) -->
   <meta name="og:title" content="Charlie's world">
   <meta name="og:description" content="Charlie's portfolio">
