--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <meta name="og:title" content="Charlie's world">
   <meta name="og:description" content="Charlie's portfolio">
   <meta name="og:image" content="https://charlieccy.github.io/startbootstrap-grayscale//img/slider/hh.jpg">
-  <meta name="og:url" content="https://charlieccy.github.io/startbootst
+  <meta name="og:url" content="https://charlieccy.github.io/startbootst">
   <meta name="og:type" content="website">
 
 
