--- a/index.html
+++ b/index.html
@@ -159,8 +159,7 @@
       <div class="row">
         <div class="col-lg-12 mx-auto">
           <h2 class="mb-4">Introduction</h2>
-          <p>This is the beginning of my Portfolio. You can listen to this song while you are browsing my artworks. Enjoy! :)
-            <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>.</p>
+          <p>This is the beginning of my Portfolio. You can listen to this song while you are browsing my artworks. Enjoy! :)</p>
           <div class="intro-video">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/cLVKn4dzA6o" frameborder="0" 
             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
