--- a/index.html
+++ b/index.html
@@ -29,13 +29,26 @@
   
   <style>
     h1{
-        font-family: 'Indie Flower', cursive;
+       font-family: 'Indie Flower', cursive;
     }
     h2{
-        font-family: 'Indie Flower', cursive;
+      
+      font-family: "Gill Sans", sans-serif;
     }
     h4{
+      font-family: "Gill Sans", sans-serif;
+    }
+    li{
+      font-family: "Gill Sans", sans-serif;
+    }
+    a{
+      font-family: "Gill Sans", sans-serif;
+    }
+    p{
       font-family: 'Indie Flower', cursive;
+    }
+    div{
+      font-family: "Gill Sans", sans-serif;
     }
     .secondary-font {
         font-family: 'Indie Flower', cursive;
@@ -403,7 +416,7 @@
               <h4 class="text-uppercase m-0">Email</h4>
               <hr class="my-4">
               <div class="small text-black-50">
-                <a href="#">charlie520chan@gmail.com</a>
+                <div class="small text-black-50">charlie520chan@gmail.com</div>
               </div>
             </div>
           </div>
